--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
 LOG_LEVEL=INFO
-GEMINI_API_KEY=your_api_key_here # if type is studio
-GEMINI_CLIENT_TYPE=studio # studio or cli
+GEMINI_API_KEY=your_api_key_here
 GEMINI_MODEL_NAME=gemini-2.5-pro
