feat: integrate with Gemini CLI

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 LOG_LEVEL=INFO
 GEMINI_API_KEY=your_api_key_here
+# gemini-2.5-pro, gemini-2.5-flash, gemini-3-pro-preview, gemini-3-flash-preview
+# For CLI: recommended to use gemini-3 to overcome tokens limitation
 GEMINI_MODEL_NAME=gemini-2.5-pro
+
+# LLM Provider: api or cli
+GEMINI_PROVIDER=cli
